--- a/main_page.html
+++ b/main_page.html
@@ -231,7 +231,7 @@
   </svg>
 
   <h1 class="title">Happy Birthday, Ayala</h1>
-  <div class="subtitle">Hear Me Calling — a special vibe for your day ✨</div>
+  <div class="subtitle">Cat's Love — a special vibe for your day ✨</div>
 </section>
 
 <!-- Carousel -->
@@ -529,3 +529,4 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Enter') tryAutoPlay(); 
 
 </body>
 </html>
+
