--- a/main_page.html
+++ b/main_page.html
@@ -254,7 +254,7 @@
 
     <div class="card">
       <img class="card-media" src="pic3.jpg" alt="Ayala - photo 3">
-      <div class="meta"><h3>Didn't Forget</h3><p>to add ur favorite, honestly i was supposed to put a pic here. ✨</p></div>
+      <div class="meta"><h3>Didn't Forget</h3><p>Have a Blessed Birthday.✨</p></div>
     </div>
 
     <div class="card">
@@ -529,6 +529,7 @@ document.addEventListener('keydown', (e)=> { if(e.key==='Enter') tryAutoPlay(); 
 
 </body>
 </html>
+
 
 
 
